<resources>
    <string name="app_name">Journey Tracker</string>
    <string name="app_title">Journey Tracker</string>
    <string name="action_alltravelnotes">My Travel Notes</string>
    <string name="action_addnewtravelnote">New Travel Note</string>
    <string name="action_aboutapp">About App</string>
    <string name="action_setting">Settings</string>
    <string name="add_new_travel_note_label">Add Travel Note</string>
    <string name="about_app_label">About App</string>
    <string name="settings_label">Settings</string>
    <string name="travel_note_info_label">Travel Note Info</string>
    <string name="add_travel_note_fragment_label">Add Travel Note</string>
    <string name="suggestions_fragment_label">Location Suggestions</string>

    <string name="hint_denumirea">Denumirea traseului</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="celsius">℃</string>
    <string name="confirm_location">Confirm location</string>
    <string name="hint_location_name">Location name</string>
    <string name="hint_notes">Notes</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
