<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/allTravelNotesFragment">

    <fragment
        android:id="@+id/allTravelNotesFragment"
        android:name="journey.project.fragments.AllTravelNotesFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_all_travel_notes" />
    <fragment
        android:id="@+id/newTravelFragment"
        android:name="journey.project.fragments.AddNewTravelNoteFragment"
        android:label="@string/add_new_travel_note_label"
        tools:layout="@layout/fragment_add_travel_note" />
    <fragment
        android:id="@+id/despreFragment"
        android:name="journey.project.fragments.AboutAppFragment"
        android:label="@string/about_app_label"
        tools:layout="@layout/fragment_about_app" />
    <fragment
        android:id="@+id/setariFragment"
        android:name="journey.project.fragments.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" />
   <!--23.04.2020 - adaugat pentru componeta de navigare-->
    <fragment
        android:id="@+id/detaliiTraseuFragment"
        android:name="journey.project.fragments.TravelNoteInfoFragment"
        android:label="@string/travel_note_info_label"
        tools:layout="@layout/fragment_travel_note_info" />

    <fragment
        android:id="@+id/travelNoteFragment"
        android:name="journey.project.fragments.TravelNoteFragment"
        android:label="@string/add_travel_note_fragment_label"
        tools:layout="@layout/fragment_add_travel_note" />

    <fragment
        android:id="@+id/suggestionsFragment"
        android:name="journey.project.fragments.LocationSelectFragment"
        android:label="@string/suggestions_fragment_label"
        tools:layout="@layout/fragment_location_selector" />
</navigation>
